--- a/HazardShield/HazardShieldUI/Properties/Resources.resx
+++ b/HazardShield/HazardShieldUI/Properties/Resources.resx
@@ -142,4 +142,10 @@
   <data name="logo_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo_48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="image_check" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\image_check.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="image_info" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\image_info.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
